<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.infraspine.callsync.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard_title"
        tools:layout="@layout/fragment_dashboard">

        <action
            android:id="@+id/action_dashboard_to_recordings"
            app:destination="@id/recordingsFragment" />

        <action
            android:id="@+id/action_dashboard_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/recordingsFragment"
        android:name="com.infraspine.callsync.ui.recordings.RecordingsFragment"
        android:label="@string/recordings_title"
        tools:layout="@layout/fragment_recordings" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.infraspine.callsync.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings" />

</navigation>
